--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,15 +1,17 @@
-.body{
+body{
     overflow-x: scroll;
     scroll-behavior: smooth;
     overflow-y: scroll;
+   
 }
 
 .desktop{
     background:#000235;
     position: absolute;
-    width:100% ;
-    height:4400px;
-    left:0;
+   width:100%;
+    height:6000px;
+   
+    overflow-anchor: inherit;
     
 }
 .Nav{
@@ -245,7 +247,7 @@ height: 73px;
 left: calc(50% - 250px/2 - 137px);
 top: 500px;
 margin-left: 90px;
-color:red;
+color:black;
 
 border: 1px solid #ABD9D9;
 border-radius: 83px;
@@ -262,4 +264,600 @@ width: 490px;
 background-image: url("../Images/Other 07.png");
 border-radius: 6px;
 
+}
+
+.T1{
+    position: absolute;
+    width: 200px;
+    height: 80px;
+    left: calc(50% - 170px/2 - 383px);
+    top: -10px;
+
+    background-image: url('../Images/T.png');
+    opacity: 0.6;
+}
+.T2{
+    position: absolute;
+    width: 300px;
+    height: 45px;
+    left: calc(50% - 152px/2 - 81px);
+    top: 25px;
+
+    background-image: url('../Images/image 5.png');
+    opacity: 0.6;
+}
+.T3{
+    position: absolute;
+    width: 5.5cm;
+    height: 1.38cm;
+    left: calc(50% - 61px/2 + 240.5px);
+    top: 24px;
+
+    background: url('../Images/image 8.png');
+    opacity: 0.6;
+}
+
+#id1{
+    display:flexbox;
+    left: calc(50% + 40rem);
+}
+
+.ana{
+    position: absolute;
+width: 373px;
+height: 28px;
+left: calc(50% - 373px/2 + 194.5px);
+top: 1380px;
+
+/* SUB HEADER */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 28px;
+
+/* identical to box height, or 138% */
+letter-spacing: 0.1em;
+text-transform: uppercase;
+
+color: #ABD9D9;
+
+
+}
+
+.typ{
+    position: absolute;
+width: 518px;
+height: 136px;
+left: calc(50% - 518px/2 + 267px);
+top: 1461px;
+
+/* H2 */
+font-family: 'Outfit';
+font-style: inherit;
+font-weight: bold;
+font-size: 60px;
+line-height: 100%;
+
+/* or 57px */
+text-transform: capitalize;
+
+color: #FFFFFF;
+
+box-shadow: #9091DC 4px 4px 5px;
+border-radius: 5px;
+}
+
+.para{
+    position: absolute;
+width: 373px;
+height: 83px;
+left: calc(50% - 373px/2 + 194.5px);
+top: 1590px;
+
+/* Body text */
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+box-shadow:5px 2px 5px #9091DC;
+border-radius: 5px;
+text-shadow: #9091DC 0px 0px 2px;
+/* or 153% */
+
+color: #FFFFFF;
+
+
+}
+
+#viewprice{
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 22px 71px;
+gap: 5px;
+
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 15px;
+line-height: 28px;
+
+
+position: absolute;
+width: 354px;
+height: 72px;
+left: calc(50% - 354px/2 + 185px);
+top: 1764px;
+color:#000235 ;
+background-color: #8D8DDA;
+border-radius: 10cm;
+box-shadow: #e3f2fd 0px 2px 2px;
+
+}
+#viewprice:hover{
+    background-color: black;
+    border-radius: 5px;
+    box-shadow: 2px 2px 4px#e3f2fd;
+    color: wheat;
+}
+
+#applabel{
+    position: absolute;
+width: 373px;
+height: 28px;
+left: calc(50% - 373px/2 - 343.5px);
+top: 1907px;
+
+/* SUB HEADER */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 28px;
+
+/* identical to box height, or 138% */
+letter-spacing: 0.1em;
+text-transform: uppercase;
+
+color: #ABD9D9;
+
+
+}
+#Browse{
+    position: absolute;
+width: 518px;
+height: 136px;
+left: calc(50% - 518px/2 - 271px);
+top: 2042px;
+
+/* H2 */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 700;
+font-size: 57px;
+line-height: 100%;
+
+/* or 57px */
+text-transform: capitalize;
+
+color: #FFFFFF;
+
+
+}
+
+#browpara{
+    position: absolute;
+width: 373px;
+height: 83px;
+left: calc(50% - 373px/2 - 343.5px);
+top: 2280px;
+
+/* Body text */
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+
+/* or 153% */
+
+color: #FFFFFF;
+}
+
+#viewprice2{
+    width: 352px;
+height: 72px;
+left: calc(50% - 673px/2 - 900.5px);
+top: 1300px;
+/* SUB HEADER */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 15px;
+line-height: 28px;
+
+
+/* identical to box height, or 138% */
+letter-spacing: 0.1em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+background-color: #8D8DDA;
+border-radius: 10cm;
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+}
+#viewprice2:hover{
+    background-color: black;
+    border-radius: 5px;
+    box-shadow: 2px 2px 4px#e3f2fd;
+    color: wheat;
+
+}
+.eli3{
+position: absolute;
+width: 679px;
+height: 679px;
+left: calc(50% - 1460px );
+top: 2404px;
+border-radius: 15cm;
+background: rgba(171, 217, 217, 0.5);
+filter: blur(480px);
+}
+
+#testi{
+    position: absolute;
+width: 165px;
+height: 28px;
+left: calc(50% - 165px/2 + 0.5px);
+top: 2669px;
+
+/* SUB HEADER */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 28px;
+
+/* identical to box height, or 138% */
+letter-spacing: 0.1em;
+text-transform: uppercase;
+text-shadow: #9091DC 2px 2px 3px;
+
+color: #ABD9D9;
+}
+
+#others{
+    position: absolute;
+width: 666px;
+height: 114px;
+left: calc(50% - 580px/2);
+top: 2858px;
+
+/* H2 */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 700;
+font-size: 57px;
+line-height: 100%;
+
+/* or 57px */
+text-align: center;
+text-transform: capitalize;
+
+color: #FFFFFF;
+
+
+}
+
+.boxx1{
+    position: absolute;
+width: 345px;
+height: 333px;
+left: calc(50% - 345px/2 - 359.5px);
+top: 3105px;
+
+background: rgba(255, 255, 255, 0.08);
+border-radius: 20px;
+}
+
+.boxx2{
+    position: absolute;
+    width: 345px;
+    height: 333px;
+    left: calc(50% - 205px/2 );
+    top: 3105px;
+    
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 20px;
+    
+}
+
+.boxx3{
+
+    position: absolute;
+    width: 345px;
+    height: 333px;
+    left: calc(50% - -330px );
+    top: 3105px;
+    
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 20px;
+    
+}
+.foot1{
+    position: absolute;
+width: 1063px;
+height: 402px;
+left: calc(50% - 1063px/2 + 10.5px);
+top: 3906px;
+
+background: linear-gradient(278.71deg, #ABD9D9 -20.32%, #5151C6 103.51%);
+border-radius: 30px;
+}
+
+
+#footlabel{
+    position: absolute;
+width: 506px;
+height: 134px;
+left: calc(50% - 1066px/2 + 11.5px);
+top: 4085px;
+
+/* H2 */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 700;
+font-size: 57px;
+line-height: 100%;
+
+/* or 57px */
+text-align: center;
+text-transform: capitalize;
+
+color: red;
+
+
+}
+
+#footyp{
+    position: absolute;
+width: 700px;
+height: 12px;
+left: calc(50% - 646px/2 + 1px);
+top: 105px;
+
+/* H2 */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 700;
+font-size: 57px;
+line-height: 100%;
+
+/* or 57px */
+text-align: center;
+text-transform: capitalize;
+text-decoration: solid;
+
+color: #FFFFFF;
+
+
+}
+
+#footbut{
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 22px 71px;
+gap: 10px;
+
+position: absolute;
+width: 293px;
+height: 72px;
+left: calc(50% - 293px/2 + 1.5px);
+top: 300px;
+
+background: #000000;
+border-radius: 83px;
+}
+
+#butlabel{
+    width: 200px;
+height: 28px;
+
+/* SUB HEADER */
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 28px;
+
+/* identical to box height, or 138% */
+letter-spacing: 0.1em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+#footbut:hover{
+    transform: scale(1.1);
+   border-radius: 10px;
+   
+   border-bottom-left-radius: 30px;
+   border-top-right-radius: 30px;
+   box-shadow: #e3f2fd 4px 8px 10px;
+}
+
+
+#butlabel:hover{
+    color:#8D8DDA;
+  }
+
+  #footown{
+    position: absolute;
+width: 150px;
+height: 29px;
+left: calc(50% - 50rem);
+top: 4500px;
+
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 22px;
+line-height: 28px;
+
+/* identical to box height */
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+
+}
+#butgroup1{
+    position: absolute;
+left: calc(50% - 40rem);
+right: 69.65%;
+top: 4600px;
+bottom: 2.05%;
+width: 150px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 31px;
+
+/* or 194% */
+
+color: #FFFFFF;
+
+
+}
+
+#market{
+    position: absolute;
+width: 123px;
+height: 20px;
+left: calc(50% - 20rem);
+top: 4500px;
+
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 22px;
+line-height: 20px;
+
+color: #FFFFFF;
+
+
+}
+
+#butgroup2{
+    position: absolute;
+left: calc(50% - 27rem);
+right: 55.21%;
+top: 4600px;
+bottom: 2.9%;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 31px;
+
+/* or 194% */
+
+color: #FFFFFF;
+
+
+}
+
+#footcont{
+
+
+position: absolute;
+width: 123px;
+height: 20px;
+left:calc(50% + 2rem);
+top: 4500px;
+
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 22px;
+line-height: 20px;
+
+color: #FFFFFF;
+}
+
+#butgroup3{
+
+    position: absolute;
+    left: calc(50% + 5rem);
+    right: 55.21%;
+    top: 4600px;
+    bottom: 2.9%;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 31px;
+    
+    /* or 194% */
+    
+    color: #FFFFFF;
+    
+
+}
+#join{
+
+position: absolute;
+width: 400px;
+height: 28px;
+left: calc(50% + 15rem);
+top: 4500px;
+
+font-family: 'Outfit';
+font-style: normal;
+font-weight: 600;
+font-size: 22px;
+line-height: 28px;
+
+/* identical to box height */
+
+color: #FFFFFF;
+border-radius: 70px;
+
+
+}
+
+#textbut{
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 22px 71px;
+gap: 10px;
+
+position: absolute;
+width: 124px;
+height: 43px;
+left: calc(50% + 31rem);
+top: 4604px;
+
+background: #8D8DDA;
+border-radius: 83px;
 }
